CHT-280: Implementation